--- a/expositores-resp.html
+++ b/expositores-resp.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Expositores Resp</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=52388634"/>
-  <link rel="stylesheet" type="text/css" href="css/expositores-resp.css?crc=4238730606" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3999740034"/>
+  <link rel="stylesheet" type="text/css" href="css/expositores-resp.css?crc=490487371" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_expositores-resp.css?crc=186619169"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=3991533229"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=3852197140"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_expositores-resp.css?crc=440910904" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
@@ -172,20 +172,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix" id="u38849"><!-- group -->
      <div class="clearfix" id="u38850"><!-- group -->
-      <div class="clip_frame" id="u38851"><!-- image -->
-       <img class="block temp_no_img_src" id="u38851_img" data-orig-src="images/grecas.png?crc=111591311" alt="" width="52" height="90" src="images/blank.gif?crc=4208392903"/>
-      </div>
+      <a class="nonblock nontext clip_frame" id="u38851" href="index.html"><!-- image --><img class="block temp_no_img_src" id="u38851_img" data-orig-src="images/grecas.png?crc=111591311" alt="" width="52" height="90" src="images/blank.gif?crc=4208392903"/></a>
       <div class="clearfix shared_content" id="u38853" data-content-guid="u38853_content"><!-- group -->
-       <div class="clearfix shared_content" id="u38854-12" data-content-guid="u38854-12_content"><!-- content -->
-        <p id="u38854-2">III Convención Nacional</p>
-        <p id="u38854-4">Protección&nbsp; Civil</p>
-        <p id="u38854-10"><span id="u38854-5">SAN LUIS POTOSÍ</span><span id="u38854-6"> </span><span id="u38854-7">|</span><span id="u38854-8"> </span><span id="u38854-9">2016</span></p>
-       </div>
+       <a class="nonblock nontext clearfix shared_content" id="u38854-12" href="index.html" data-content-guid="u38854-12_content"><!-- content --><p id="u38854-2">III Convención Nacional</p><p id="u38854-4">Protección&nbsp; Civil</p><p id="u38854-10"><span id="u38854-5">SAN LUIS POTOSÍ</span><span id="u38854-6"> </span><span id="u38854-7">|</span><span id="u38854-8"> </span><span id="u38854-9">2016</span></p></a>
       </div>
      </div>
-     <div class="clip_frame" id="u38855"><!-- svg -->
-      <img class="svg temp_no_img_src" id="u38856" data-orig-src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290" src="images/blank.gif?crc=4208392903"/>
-     </div>
+     <a class="nonblock nontext clip_frame" id="u38855" href="index.html"><!-- svg --><img class="svg temp_no_img_src" id="u38856" data-orig-src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290" src="images/blank.gif?crc=4208392903"/></a>
     </div>
     <div class="clearfix grpelem" id="ppu4713"><!-- column -->
      <div class="clearfix colelem" id="pu4713"><!-- group -->
@@ -479,14 +471,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <span class="browser_width placeholder" data-placeholder-for="u154-bw_content"><!-- placeholder node --></span>
     <div class="clearfix temp_no_id" data-orig-id="u38849"><!-- group -->
      <div class="clearfix temp_no_id" data-orig-id="u38850"><!-- group -->
-      <div class="clip_frame temp_no_id" data-orig-id="u38851"><!-- image -->
-       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/grecas.png?crc=111591311" alt="" width="44" height="77" data-orig-id="u38851_img" src="images/blank.gif?crc=4208392903"/>
-      </div>
+      <a class="nonblock nontext clip_frame temp_no_id" href="index.html" data-orig-id="u38851"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/grecas.png?crc=111591311" alt="" width="44" height="77" data-orig-id="u38851_img" src="images/blank.gif?crc=4208392903"/></a>
       <span class="clearfix placeholder" data-placeholder-for="u38853_content"><!-- placeholder node --></span>
      </div>
-     <div class="clip_frame temp_no_id" data-orig-id="u38855"><!-- svg -->
-      <img class="svg temp_no_id temp_no_img_src" data-orig-src="images/logopc.svg?crc=3794957760" width="42" height="42" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290" data-orig-id="u38856" src="images/blank.gif?crc=4208392903"/>
-     </div>
+     <a class="nonblock nontext clip_frame temp_no_id" href="index.html" data-orig-id="u38855"><!-- svg --><img class="svg temp_no_id temp_no_img_src" data-orig-src="images/logopc.svg?crc=3794957760" width="42" height="42" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290" data-orig-id="u38856" src="images/blank.gif?crc=4208392903"/></a>
     </div>
     <div class="temp_no_id" data-orig-id="menuu167-wrapper">
      <nav class="MenuBar clearfix temp_no_id" data-orig-id="menuu167"><!-- horizontal box -->
@@ -748,14 +736,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <span class="browser_width placeholder" data-placeholder-for="u154-bw_content"><!-- placeholder node --></span>
     <div class="clearfix temp_no_id shared_content" data-orig-id="u38849" data-content-guid="u38849_content"><!-- group -->
      <div class="clearfix temp_no_id" data-orig-id="u38850"><!-- group -->
-      <div class="clip_frame temp_no_id" data-orig-id="u38851"><!-- image -->
-       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/grecas.png?crc=111591311" alt="" width="36" height="63" data-orig-id="u38851_img" src="images/blank.gif?crc=4208392903"/>
-      </div>
+      <a class="nonblock nontext clip_frame temp_no_id" href="index.html" data-orig-id="u38851"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/grecas.png?crc=111591311" alt="" width="36" height="63" data-orig-id="u38851_img" src="images/blank.gif?crc=4208392903"/></a>
       <span class="clearfix placeholder" data-placeholder-for="u38853_content"><!-- placeholder node --></span>
      </div>
-     <div class="clip_frame temp_no_id shared_content" data-orig-id="u38855" data-content-guid="u38855_content"><!-- svg -->
-      <img class="svg temp_no_id temp_no_img_src" data-orig-src="images/logopc.svg?crc=3794957760" width="38" height="38" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290" data-orig-id="u38856" src="images/blank.gif?crc=4208392903"/>
-     </div>
+     <a class="nonblock nontext clip_frame temp_no_id shared_content" href="index.html" data-orig-id="u38855" data-content-guid="u38855_content"><!-- svg --><img class="svg temp_no_id temp_no_img_src" data-orig-src="images/logopc.svg?crc=3794957760" width="38" height="38" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290" data-orig-id="u38856" src="images/blank.gif?crc=4208392903"/></a>
     </div>
     <div class="temp_no_id" data-orig-id="menuu167-wrapper">
      <nav class="MenuBar clearfix temp_no_id" data-orig-id="menuu167"><!-- horizontal box -->
@@ -1109,14 +1093,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="u38849"><!-- group -->
       <div class="clearfix grpelem temp_no_id" data-orig-id="u38850"><!-- group -->
-       <div class="clip_frame grpelem temp_no_id" data-orig-id="u38851"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/grecas.png?crc=111591311" alt="" width="35" height="61" data-orig-id="u38851_img" src="images/blank.gif?crc=4208392903"/>
-       </div>
+       <a class="nonblock nontext clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u38851"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/grecas.png?crc=111591311" alt="" width="35" height="61" data-orig-id="u38851_img" src="images/blank.gif?crc=4208392903"/></a>
        <div class="clearfix grpelem temp_no_id" data-orig-id="u38853"><!-- group -->
-        <span class="clearfix grpelem placeholder" data-placeholder-for="u38854-12_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u38854-12_content"><!-- placeholder node --></span>
        </div>
       </div>
-      <span class="clip_frame grpelem placeholder" data-placeholder-for="u38855_content"><!-- placeholder node --></span>
+      <span class="nonblock nontext clip_frame grpelem placeholder" data-placeholder-for="u38855_content"><!-- placeholder node --></span>
      </div>
      <div id="accordionu40574-wrapper">
       <ul class="AccordionWidget clearfix pinned-colelem" id="accordionu40574"><!-- vertical box -->
