--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Inicio</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4001794566" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=530564550" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=4181660910"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=4078985566" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=215750536" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -272,10 +272,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <a class="anchor_item grpelem shared_content" id="anchor-u1817" data-content-guid="anchor-u1817_content"></a>
      </div>
-     <div class="clearfix colelem" id="pu49485"><!-- group -->
-      <div class="clip_frame clearfix grpelem" id="u49485"><!-- image -->
-       <img class="position_content temp_no_img_src" id="u49485_img" data-orig-src="images/miguelangel411x377.jpg?crc=452296381" alt="" width="411" height="377" src="images/blank.gif?crc=4208392903"/>
+     <div class="clearfix colelem shared_content" id="pu1885-11" data-content-guid="pu1885-11_content"><!-- group -->
+      <div class="clearfix grpelem shared_content" id="u1885-11" data-content-guid="u1885-11_content"><!-- content -->
+       <p id="u1885-2">¿Qué presenta la</p>
+       <p id="u1885-4">Convención Nacional de</p>
+       <p id="u1885-6">Protección Civil?</p>
+       <p id="u1885-7">&nbsp;</p>
+       <p id="u1885-9">Uno de los objetivos primordiales de esta Convención Nacional, es centrar los esfuerzos en las amenazas naturales y humanas, el entendimiento de los riesgos ambientales, tecnológicos y biológicos que se ciñen sobre el país.</p>
       </div>
+      <div class="clearfix grpelem" id="u57345-7"><!-- content -->
+       <p id="u57345-2">Últimas Noticias</p>
+       <p id="u57345-3">&nbsp;</p>
+       <p id="u57345-5">Alertamientos de #proteccióncivil: Atiende recomendaciones del #SINAPROC</p>
+      </div>
+     </div>
+     <div class="clearfix colelem" id="pu1915-10"><!-- group -->
       <div class="clearfix grpelem shared_content" id="u1915-10" data-content-guid="u1915-10_content"><!-- content -->
        <p id="u1915-2">Expositores</p>
        <p>&nbsp;</p>
@@ -306,14 +317,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <img class="svg temp_no_img_src" id="u2052" data-orig-src="images/logopc.svg?crc=3794957760" width="290" height="290" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
-      <div class="clearfix grpelem shared_content" id="u1885-11" data-content-guid="u1885-11_content"><!-- content -->
-       <p id="u1885-2">¿Qué presenta la</p>
-       <p id="u1885-4">Convención Nacional de</p>
-       <p id="u1885-6">Protección Civil?</p>
-       <p id="u1885-7">&nbsp;</p>
-       <p id="u1885-9">Uno de los objetivos primordiales de esta Convención Nacional, es centrar los esfuerzos en las amenazas naturales y humanas, el entendimiento de los riesgos ambientales, tecnológicos y biológicos que se ciñen sobre el país.</p>
-      </div>
-      <div class="museBGSize grpelem shared_content" id="u49523" data-content-guid="u49523_content"><!-- simple frame --></div>
       <div class="clearfix grpelem shared_content" id="u2033-4" data-content-guid="u2033-4_content"><!-- content -->
        <p id="u2033-2">COLABORADORES</p>
       </div>
@@ -321,11 +324,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="clip_frame grpelem" id="u49535"><!-- image -->
         <img class="block temp_no_img_src" id="u49535_img" data-orig-src="images/banner518x205.jpg?crc=1424688" alt="" width="518" height="205" src="images/blank.gif?crc=4208392903"/>
        </div>
-      </div>
-      <div class="clearfix grpelem shared_content" id="u57345-7" data-content-guid="u57345-7_content"><!-- content -->
-       <p id="u57345-2">Últimas Noticias</p>
-       <p id="u57345-3">&nbsp;</p>
-       <p id="u57345-5">Alertamientos de #proteccióncivil: Atiende recomendaciones del #SINAPROC</p>
       </div>
      </div>
      <a class="nonblock nontext museBGSize clearfix colelem shared_content" id="u2061-20" href="conferencias.html" data-content-guid="u2061-20_content"><!-- content --><p id="u2061">&nbsp;</p><p id="u2061-3">Conferencias Magistrales</p><p id="u2061-4">&nbsp;</p><p id="u2061-5">&nbsp;</p><p id="u2061-7">PANEL DE DISCUSIÓN PLENARIO</p><p id="u2061-8">&nbsp;</p><p id="u2061-10">PANELES DE DISCUSIÓN</p><p id="u2061-11">&nbsp;</p><p id="u2061-13">CASOS DE ESTUDIO</p><p id="u2061-14">&nbsp;</p><p id="u2061-16">TALLERES</p><p id="u2061-17">&nbsp;</p><p id="u2061-18">&nbsp;</p></a>
@@ -593,20 +591,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <span class="anchor_item grpelem placeholder" data-placeholder-for="anchor-u1817_content"><!-- placeholder node --></span>
      </div>
-     <div class="clearfix colelem temp_no_id" data-orig-id="pu49485"><!-- group -->
-      <div class="clip_frame clearfix grpelem temp_no_id" data-orig-id="u49485"><!-- image -->
-       <img class="position_content temp_no_id temp_no_img_src" data-orig-src="images/miguelangel360x330.jpg?crc=36689875" alt="" width="360" height="330" data-orig-id="u49485_img" src="images/blank.gif?crc=4208392903"/>
-      </div>
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u1885-11_content"><!-- placeholder node --></span>
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u57345-7_content"><!-- placeholder node --></span>
-     </div>
-     <div class="clearfix colelem" id="pu1915-10"><!-- group -->
+     <span class="clearfix colelem placeholder" data-placeholder-for="pu1885-11_content"><!-- placeholder node --></span>
+     <div class="clearfix colelem temp_no_id" data-orig-id="pu1915-10"><!-- group -->
       <span class="clearfix grpelem placeholder" data-placeholder-for="u1915-10_content"><!-- placeholder node --></span>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u2011-11_content"><!-- placeholder node --></span>
       <span class="museBGSize grpelem placeholder" data-placeholder-for="u2036_content"><!-- placeholder node --></span>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u2039-4_content"><!-- placeholder node --></span>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u49501_content"><!-- placeholder node --></span>
-      <span class="museBGSize grpelem placeholder" data-placeholder-for="u49523_content"><!-- placeholder node --></span>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u2033-4_content"><!-- placeholder node --></span>
       <div class="clearfix grpelem temp_no_id" data-orig-id="u49551"><!-- group -->
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u49535"><!-- image -->
@@ -862,19 +853,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <span class="anchor_item grpelem placeholder" data-placeholder-for="anchor-u1817_content"><!-- placeholder node --></span>
      </div>
-     <div class="clearfix colelem temp_no_id" data-orig-id="pu49485"><!-- group -->
-      <div class="clip_frame clearfix grpelem temp_no_id" data-orig-id="u49485"><!-- image -->
-       <img class="position_content temp_no_id temp_no_img_src" data-orig-src="images/miguelangel275x253.jpg?crc=4029741177" alt="" width="275" height="252" data-orig-id="u49485_img" src="images/blank.gif?crc=4208392903"/>
-      </div>
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u1885-11_content"><!-- placeholder node --></span>
-      <span class="clearfix grpelem placeholder" data-placeholder-for="u57345-7_content"><!-- placeholder node --></span>
-     </div>
-     <div class="clearfix colelem" id="pppu1915-10"><!-- group -->
-      <div class="clearfix grpelem" id="ppu1915-10"><!-- column -->
-       <div class="clearfix colelem temp_no_id" data-orig-id="pu1915-10"><!-- group -->
-        <span class="clearfix grpelem placeholder" data-placeholder-for="u1915-10_content"><!-- placeholder node --></span>
-        <span class="museBGSize grpelem placeholder" data-placeholder-for="u49523_content"><!-- placeholder node --></span>
-       </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="pu1885-11_content"><!-- placeholder node --></span>
+     <div class="clearfix colelem" id="ppu1915-10"><!-- group -->
+      <div class="clearfix grpelem temp_no_id" data-orig-id="pu1915-10"><!-- column -->
+       <span class="clearfix colelem placeholder" data-placeholder-for="u1915-10_content"><!-- placeholder node --></span>
        <div class="clearfix colelem temp_no_id" data-orig-id="u49551"><!-- group -->
         <div class="clip_frame grpelem temp_no_id" data-orig-id="u49535"><!-- image -->
          <img class="block temp_no_id temp_no_img_src" data-orig-src="images/banner363x145.jpg?crc=3900828806" alt="" width="363" height="144" data-orig-id="u49535_img" src="images/blank.gif?crc=4208392903"/>
@@ -1096,22 +1078,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <span class="clip_frame grpelem placeholder" data-placeholder-for="u27248_content1"><!-- placeholder node --></span>
       </div>
      </div>
-     <div class="clearfix colelem" id="pu57269"><!-- group -->
-      <div class="grpelem shared_content" id="u57269" data-content-guid="u57269_content"><!-- simple frame -->
-       <div class="fluid_height_spacer"></div>
-      </div>
-      <img class="grpelem temp_no_id temp_no_img_src" alt="" data-orig-src="images/miguelangel-u49485.png?crc=4109187230" data-image-width="440" data-orig-id="u49485" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+     <div class="colelem shared_content" id="u57269" data-content-guid="u57269_content"><!-- simple frame -->
+      <div class="fluid_height_spacer"></div>
      </div>
      <div class="browser_width colelem" id="u1915-10-bw">
       <span class="clearfix placeholder" data-placeholder-for="u1915-10_content"><!-- placeholder node --></span>
      </div>
-     <div class="clearfix colelem shared_content" id="pu57356" data-content-guid="pu57356_content"><!-- group -->
-      <div class="grpelem" id="u57356"><!-- simple frame -->
-       <div class="fluid_height_spacer"></div>
-      </div>
-      <div class="museBGSize grpelem temp_no_id" data-orig-id="u49523"><!-- simple frame -->
-       <div class="fluid_height_spacer"></div>
-      </div>
+     <div class="colelem shared_content" id="u57356" data-content-guid="u57356_content"><!-- simple frame -->
+      <div class="fluid_height_spacer"></div>
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="u49501"><!-- group -->
       <span class="clearfix grpelem placeholder" data-placeholder-for="u2049-8_content"><!-- placeholder node --></span>
@@ -1325,14 +1299,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u28594_content"><!-- placeholder node --></span>
      </div>
-     <div class="clearfix colelem temp_no_id" data-orig-id="pu57269"><!-- group -->
-      <span class="grpelem placeholder" data-placeholder-for="u57269_content"><!-- placeholder node --></span>
-      <img class="grpelem temp_no_id temp_no_img_src" alt="" data-orig-src="images/miguelangel-u494852.png?crc=4153178365" data-image-width="192" data-orig-id="u49485" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
-     </div>
+     <span class="colelem placeholder" data-placeholder-for="u57269_content"><!-- placeholder node --></span>
      <div class="browser_width colelem temp_no_id" data-orig-id="u1915-10-bw">
       <span class="clearfix placeholder" data-placeholder-for="u1915-10_content"><!-- placeholder node --></span>
      </div>
-     <span class="clearfix colelem placeholder" data-placeholder-for="pu57356_content"><!-- placeholder node --></span>
+     <span class="colelem placeholder" data-placeholder-for="u57356_content"><!-- placeholder node --></span>
      <div class="clearfix colelem temp_no_id" data-orig-id="u49501"><!-- group -->
       <span class="clearfix grpelem placeholder" data-placeholder-for="u2049-8_content"><!-- placeholder node --></span>
       <div class="clip_frame grpelem temp_no_id" data-orig-id="u2055"><!-- svg -->
