--- a/presentaciones.html
+++ b/presentaciones.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Presentaciones</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=3955512914"/>
+  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=478145981"/>
   <link rel="stylesheet" type="text/css" href="css/presentaciones.css?crc=3933963285" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
@@ -86,20 +86,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </nav>
        <div class="clearfix grpelem" id="u28141"><!-- group -->
         <div class="clearfix grpelem" id="u27483"><!-- group -->
-         <div class="clip_frame grpelem" id="u27486"><!-- image -->
-          <img class="block" id="u27486_img" src="images/grecas.png?crc=111591311" alt="" data-image-width="52" data-image-height="90"/>
-         </div>
+         <a class="nonblock nontext clip_frame grpelem" id="u27486" href="index.html"><!-- image --><img class="block" id="u27486_img" src="images/grecas.png?crc=111591311" alt="" data-image-width="52" data-image-height="90"/></a>
          <div class="clearfix grpelem" id="u27484"><!-- group -->
-          <div class="clearfix grpelem" id="u27485-9"><!-- content -->
-           <p id="u27485-2">III Convención Nacional</p>
-           <p id="u27485-4">Protección Civil</p>
-           <p id="u27485-7"><span id="u27485-5">SAN LUIS POTOSÍ</span> | 2016</p>
-          </div>
+          <a class="nonblock nontext clearfix grpelem" id="u27485-9" href="index.html"><!-- content --><p id="u27485-2">III Convención Nacional</p><p id="u27485-4">Protección Civil</p><p id="u27485-7"><span id="u27485-5">SAN LUIS POTOSÍ</span> | 2016</p></a>
          </div>
         </div>
-        <div class="clip_frame grpelem" id="u27524"><!-- svg -->
-         <img class="svg" id="u27525" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-        </div>
+        <a class="nonblock nontext clip_frame grpelem" id="u27524" href="index.html"><!-- svg --><img class="svg" id="u27525" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/></a>
        </div>
       </div>
      </div>
