--- a/sede.html
+++ b/sede.html
@@ -16,12 +16,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Sede</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=52388634"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3999740034"/>
   <link rel="stylesheet" type="text/css" href="css/sede.css?crc=3923730026" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_sede.css?crc=3800565075"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=3991533229" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=3852197140" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -45,20 +45,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix pinned-colelem" id="u38849"><!-- group -->
      <div class="clearfix" id="u38850"><!-- group -->
-      <div class="clip_frame" id="u38851"><!-- image -->
-       <img class="block" id="u38851_img" src="images/grecas.png?crc=111591311" alt="" width="52" height="90"/>
-      </div>
+      <a class="nonblock nontext clip_frame" id="u38851" href="index.html"><!-- image --><img class="block" id="u38851_img" src="images/grecas.png?crc=111591311" alt="" width="52" height="90"/></a>
       <div class="clearfix" id="u38853"><!-- group -->
-       <div class="clearfix" id="u38854-12"><!-- content -->
-        <p id="u38854-2">III Convención Nacional</p>
-        <p id="u38854-4">Protección&nbsp; Civil</p>
-        <p id="u38854-10"><span id="u38854-5">SAN LUIS POTOSÍ</span><span id="u38854-6"> </span><span id="u38854-7">|</span><span id="u38854-8"> </span><span id="u38854-9">2016</span></p>
-       </div>
+       <a class="nonblock nontext clearfix" id="u38854-12" href="index.html"><!-- content --><p id="u38854-2">III Convención Nacional</p><p id="u38854-4">Protección&nbsp; Civil</p><p id="u38854-10"><span id="u38854-5">SAN LUIS POTOSÍ</span><span id="u38854-6"> </span><span id="u38854-7">|</span><span id="u38854-8"> </span><span id="u38854-9">2016</span></p></a>
       </div>
      </div>
-     <div class="clip_frame" id="u38855"><!-- svg -->
-      <img class="svg" id="u38856" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-     </div>
+     <a class="nonblock nontext clip_frame" id="u38855" href="index.html"><!-- svg --><img class="svg" id="u38856" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/></a>
     </div>
     <div class="clearfix pinned-colelem" id="u412-4"><!-- content -->
      <p id="u412-2">9 - 11 NOVIEMBRE • SAN LUIS POTOSÍ, MX</p>
